--- a/package.json
+++ b/package.json
@@ -70,11 +70,13 @@
   "dependencies": {
     "bluebird": "^3.3.4",
     "classnames": "^2.1.3",
+    "node-readability": "^2.2.0",
     "react": "^15.0.2",
     "react-dock": "^0.2.3",
     "react-dom": "^15.0.2",
     "react-redux": "^4.3.0",
     "redux": "^3.2.1",
-    "redux-thunk": "^2.0.1"
+    "redux-thunk": "^2.0.1",
+    "url": "^0.11.0"
   }
 }
