--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -1,28 +1,23 @@
 {
-  "version": "0.0.0",
+  "version": "0.0.1",
   "name": "react-chrome-extension-example",
-  "manifest_version": 2,
   "description": "Example for react-chrome-extension-boilerplate",
-  "browser_action": {
-    "default_title": "React Chrome Extension Example",
-    "default_popup": "popup.html"
-  },
   "icons": {
     "16": "img/icon-16.png",
     "48": "img/icon-48.png",
     "128": "img/icon-128.png"
   },
-  "web_accessible_resources": [
-    "inject.html"
+  "permissions": [
+    "activeTab"
   ],
   "background": {
-    "page": "background.html"
+    "scripts": [
+      "js/background.bundle.js"
+    ],
+    "persistent": false
   },
-  "permissions": [
-    "activeTab",
-    "management",
-    "tabs",
-    "storage"
-  ],
-  "content_security_policy": "default-src 'self'; script-src 'self' http://localhost:3000 https://localhost:3000 'unsafe-eval'; connect-src http://localhost:3000 https://localhost:3000; style-src * 'unsafe-inline' 'self' blob:; img-src 'self' data:;"
+  "browser_action": {
+    "default_title": "Make this page red"
+  },
+  "manifest_version": 2
 }
