--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -8,7 +8,8 @@
     "128": "img/icon-128.png"
   },
   "permissions": [
-    "activeTab"
+    "activeTab",
+    "storage"
   ],
   "background": {
     "scripts": [
