--- a/package.json
+++ b/package.json
@@ -70,7 +70,10 @@
   "dependencies": {
     "bluebird": "^3.3.4",
     "classnames": "^2.1.3",
+    "deferred": "^0.7.5",
+    "firebase": "^3.2.0",
     "node-readability": "^2.2.0",
+    "ramda": "^0.21.0",
     "react": "^15.0.2",
     "react-dock": "^0.2.3",
     "react-dom": "^15.0.2",
