--- a/package.json
+++ b/package.json
@@ -72,6 +72,9 @@
     "classnames": "^2.1.3",
     "deferred": "^0.7.5",
     "firebase": "^3.2.0",
+    "html-md": "^3.0.2",
+    "json-loader": "^0.5.4",
+    "markdown-loader": "^0.1.7",
     "node-readability": "^2.2.0",
     "ramda": "^0.21.0",
     "react": "^15.0.2",
@@ -80,6 +83,7 @@
     "react-redux": "^4.3.0",
     "redux": "^3.2.1",
     "redux-thunk": "^2.0.1",
+    "remarkable": "^1.6.2",
     "url": "^0.11.0"
   }
 }
