--- a/package.json
+++ b/package.json
@@ -1,31 +1,23 @@
 {
-  "name": "react-chrome-extension-boilerplate",
-  "version": "0.9.0",
-  "description": "Boilerplate for Chrome extension React.js project",
+  "name": "chrome-read",
+  "version": "0.1.0",
+  "description": "Reading chrome extension",
   "scripts": {
     "dev": "node scripts/dev",
     "build": "node scripts/build",
     "compress": "node scripts/compress",
     "compress-keygen": "crx keygen",
-    "clean": "rimraf build/ dev/ *.zip *.crx",
-    "lint": "eslint app chrome test scripts webpack/*.js",
-    "test-e2e": "cross-env NODE_ENV=test mocha test/e2e",
-    "test": "cross-env NODE_ENV=test mocha -r ./test/setup-app test/app"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/jhen0409/react-chrome-extension-boilerplate.git"
+    "clean": "rimraf build/ dev/ *.zip *.crx"
   },
   "keywords": [
     "chrome",
     "extension",
     "react",
     "redux",
-    "hot reload",
     "webpack",
     "boilerplate"
   ],
-  "author": "Jhen <developer@jhen.me>",
+  "author": "Andrey Makarov <vivalaakam@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.3.15",
